--- a/requirements.txt
+++ b/requirements.txt
@@ -15,11 +15,13 @@ Django==3.2.13
 django-celery-beat==2.3.0
 django-timezone-field==5.0
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
 importlib-metadata==4.12.0
 kombu==5.2.4
 mysqlclient==1.4.2.post1
 packaging==21.3
 prompt-toolkit==3.0.30
+PyJWT==2.4.0
 pyparsing==3.0.9
 python-crontab==2.6.0
 python-dateutil==2.8.2
